Get ProGuard and jpackage working with LWJGL 2, why not.
This also updates Gradle to 7.1.1, which needed some small tweaks.