@@ -1,3 +1,12 @@
+buildscript {
+	repositories {
+		gradlePluginPortal()
+	}
+	dependencies {
+		classpath "org.beryx:badass-runtime-plugin:1.12.4"
+	}
+}
+apply plugin: 'org.beryx.runtime'
 apply plugin: 'application'
 
 sourceSets.main.resources.srcDirs += [ rootProject.file('assets').path ]
@@ -10,81 +19,70 @@ dependencies {
   api "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
 }
 
-import org.gradle.internal.os.OperatingSystem
+def os = System.properties['os.name'].toLowerCase()
 
 run {
 	workingDir = rootProject.file('assets').path
 	setIgnoreExitValue(true)
-	
-	if (OperatingSystem.current() == OperatingSystem.MAC_OS) {
-		// Required to run LWJGL Java apps on MacOS
-		jvmArgs += "-XstartOnFirstThread"
-	}
 }
 jar {
 	archiveFileName = "${appName}-Demo.jar"
-//	from files(sourceSets.main.output.classesDirs)
+	duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
+	destinationDirectory = file("$project.buildDir/lib")
 	dependsOn configurations.runtimeClasspath
-	from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } } 
+	from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
+	exclude('META-INF/INDEX.LIST', 'META-INF/*.SF', 'META-INF/*.DSA', 'META-INF/*.RSA')
+	dependencies {
+		exclude('META-INF/INDEX.LIST', 'META-INF/maven/**')
+	}
 	manifest {
 		attributes 'Main-Class': project.mainClassName
 	}
 }
-// creates a slim JDK runtime for distribution
-task createRuntime(type: Exec) {
-	doFirst() {
-		project.delete("${buildDir}/runtime")
-	}
-	String runtimePath = "${buildDir}/runtime"
 
-	workingDir project.projectDir
-	commandLine = [
-			"${rootDir}/jpackage/bin/jlink",
-			'-p', "${rootDir}/jpackage/jmods",
-			'--add-modules', 'java.base,java.desktop,jdk.unsupported',
-			'--strip-debug',
-			'--no-header-files',
-			'--no-man-pages',
-			'--strip-native-commands',
-			"--vm=server",
-			"--compress=2",
-			'--output', runtimePath
-	]
+task proguard(type: proguard.gradle.ProGuardTask) {
+	outputs.upToDateWhen { false }
+	configuration 'proguard-rules.pro'
+	//printmapping 'build/lib/out.map'
+	if (System.getProperty('java.version').startsWith('1.')) {
+		libraryjars "${System.getProperty('java.home')}/lib/rt.jar"
+	} else {
+//		libraryjars "C:/d/jvm/jdk16-hotspot/jmods/java.base.jmod", jarfilter: '!**.jar', filter: '!module-info.class'
+		libraryjars "${System.getProperty('java.home')}/jmods/java.base.jmod", jarfilter: '!**.jar', filter: '!module-info.class'
+	}
+	injars "build/lib/${appName}-Demo.jar"
+	outjars "build/lib/${appName}.jar"
 }
 
-// creates application bundle (executable + runtime)
-task jpackage(type: Exec, dependsOn: jar) {
-	doFirst() {
-		project.delete("${buildDir}/distribution/$project.appName")
-	}
-	dependsOn createRuntime
-	workingDir project.projectDir
-	def commands = [
-			"${rootDir}/jpackage/bin/jpackage",
-			'--dest', "${buildDir}/distribution",
-			'--input', "${buildDir}/libs",
-			'--name', project.appName,
-			'--main-class', project.mainClassName,
-			'--main-jar', jar.archiveFile.get().asFile.getName(),
-			'--runtime-image', "${buildDir}/runtime"
-	]
+proguard.dependsOn jar
 
-	if (OperatingSystem.current() == OperatingSystem.WINDOWS) {
-		commands << '--icon'
-		commands << "${rootDir}/logo.ico"
-//		commands << '--java-options'
-//		commands << "-splash:splash.png"
-	} else if (OperatingSystem.current() == OperatingSystem.LINUX) {
-		commands << '--icon'
-		commands << "${project.projectDir}/src/main/resources/libgdx64.png"
-//		commands << '--java-options'
-//		commands << "-splash:splash.png"
-	} else if (OperatingSystem.current() == OperatingSystem.MAC_OS) {
-		commands << '--icon'
-		commands << "${rootDir}/logo.icns"
-		commands << '--java-options'
-		commands << "-XstartOnFirstThread"
-	}
+jpackageImage.dependsOn proguard
 
-	commandLine = commands
+runtime {
+	options.set(['--strip-debug',
+				 '--compress', '2',
+				 '--no-header-files',
+				 '--no-man-pages',
+				 '--strip-native-commands',
+				 '--vm', 'server'])
+	modules.set(['java.desktop',
+				 'jdk.unsupported'])
+	distDir.set(file(buildDir))
+	jpackage {
+		imageName = 'CaveCops'
+		skipInstaller = true
+		jpackageHome = javaHome.getOrElse("")
+		mainJar = "${appName}.jar"// jar.archiveFileName.get()
+		if (os.contains('win')) {
+			imageOptions = ["--icon", "../logo.ico"]
+		} else if (os.contains('nix' || os.contains('nux') || os.contains('bsd'))) {
+			imageOptions = ["--icon", "../logo.png"]
+		} else if (os.contains('mac')) {
+			imageOptions = ["--icon", "../logo.icns"]
+		}
+	}
+}
+
+jpackageImage.doLast {
+	file("build/jpackage/CaveCops/app/${appName}-Demo.jar").delete()
 }
